Add fault injection test mode
